# otus-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  report.md
.cursor/: mcp.json
scripts/: smoke_test.py  test_search_excerpts.py
src/notes_mcp/: __init__.py  config.py  db.py  ocr.py  search_excerpts.py  server.py  service.py  settings_store.py  storage.py
src/notes_mcp/web/: __init__.py  app.py
src/notes_mcp/web/static/: app.js  index.html  style.css
